<resources>

    <string name="app_name">XposedMTC</string>
    <string name="music_app_name">MyMusic</string>
    <string name="video_app_name">MyVideo</string>
    <string name="radio_app_name">MyRadio</string>
    <string name="backview_name">BackView</string>
    <string name="pref_apps_list_summary">Select your preferred music app (default is MTCMusic)</string>
    <string name="pref_apps_list_title">Preferred Music App</string>
    <string name="pref_vid_list_summary">Select your preferred video app (default is MTCMovie)</string>
    <string name="pref_vid_list_title">Preferred Video App</string>
    <string name="pref_mode_list_summary">Additional inputs for switching (Music standard)</string>
    <string name="pref_mode_list_title">Mode Switch Inputs</string>
    <string name="loading">Loading apps list</string>
    <string name="pleasewait">Patience is a virtue</string>
    <string name="loudon">Loudness enabled</string>
    <string name="loudoff">Loudness disabled</string>
    <string name="loudtitle">Loudness on Boot</string>
    <string name="modeon">Mode switch overridden</string>
    <string name="modeoff">Mode switch default</string>
    <string name="modetitle">Override Mode Switch</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="dimmer_start_title">Start Time</string>
    <string name="dimmer_end_title">End Time</string>
    
    <string name="dimmeron">Enabled</string>
    <string name="dimmeroff">Disabled</string>
    <string name="dimmertitle">Dimmer Control</string>
    
    <string name="volon">Volume changes will display in place of foreground app title</string>
    <string name="voloff">Standard Volume OSD will be shown</string>
    <string name="voltitle">Override Volume OSD</string>
    
    <string name="startbutton">Start Service</string>
	<string name="stopbutton">Stop Service</string>
	
    <string name="sunriseon">Sunrise/sunset times based on GPS location, timezone, &amp; date</string>
    <string name="sunriseoff">Disabled</string>
    <string name="sunrisetitle">Set start/end times automatically</string>
    
    <string name="dimm_seek_summary">Brightness level during dim period</string>
    <string name="dimm_seek_title">Dimmer Level</string>
    <string name="nondimm_seek_summary">Brightness level during non-dimmed periods</string>
    <string name="nondimm_seek_title">Non-dimmed Level</string>
    <string name="radio_presets">Learn Radio Presets</string>
    <string name="reseton">Radio presets will overwrite defaults</string>
    <string name="resetoff">Radio presets might get reset on boot</string>
    <string name="resettitle">Use Custom Radio Presets</string>
    
    <string name="servicetext">Sunrise/sunset service is running</string>
	<string name="servicestart">XMTC service started</string>
	
	<string name="obd_summary_off">Only BT OBD adapter names containing OBD will connect</string>
    <string name="obd_summary_on">Change OBD device string to match below</string>
    <string name="obd_title">Override BT OBD devices</string>

    <string name="obdstring_title">OBD Device String</string>
    <string name="obdstring_summary">Enter full or partial BT OBD device name</string>

    <string name="debug_summary_off">Debug output is disabled</string>
    <string name="debug_summary_on">Debug output is written to Xposed error.log</string>
    <string name="debug_title">Debug</string>
    <string name="filteroff">Screen Filter will not be enabled during dimming period</string>
    <string name="filteron">Screen Filter will be enabled during dimming period</string>
    <string name="filtertitle">Screen Filter Integration</string>
    <string name="versionsummary">Version 1.3.2e</string>
    <string name="appsfragtitle">App/Modeswitch Overrides</string>
    <string name="dimmerfragtitle">Dimmer Settings</string>
    <string name="obdfragtitle">BT OBD Settings</string>
    <string name="presetsfragtitle">Radio Preset Settings</string>
    <string name="miscfragtitle">Misc Settings</string>


</resources>