<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.dr8.xposedmtc.utils.AppsListPref
        android:defaultValue="@array/pref_apps_list_default"
        android:key="apps_key"
        android:summary="@string/pref_apps_list_summary"
        android:title="@string/pref_apps_list_title" />
    <com.dr8.xposedmtc.utils.AppsListPref
        android:defaultValue="@array/pref_apps_list_default"
        android:key="video_key"
        android:summary="@string/pref_vid_list_summary"
        android:title="@string/pref_vid_list_title" />

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="modeswitch"
        android:summaryOff="@string/modeoff"
        android:summaryOn="@string/modeon"
        android:title="@string/modetitle" />

    <MultiSelectListPreference
        android:defaultValue="@array/pref_mode_list_default"
        android:dependency="modeswitch"
        android:entries="@array/pref_mode_entries"
        android:entryValues="@array/pref_mode_values"
        android:key="mode_key"
        android:summary="@string/pref_mode_list_summary"
        android:title="@string/pref_mode_list_title" />

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="volswitch"
        android:summaryOff="@string/voloff"
        android:summaryOn="@string/volon"
        android:title="@string/voltitle" />
    
    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="dimmerswitch"
        android:summaryOff="@string/dimmeroff"
        android:summaryOn="@string/dimmeron"
        android:title="@string/dimmertitle" />

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:dependency="dimmerswitch"
        android:key="screenfilter"
        android:summaryOff="@string/filteroff"
        android:summaryOn="@string/filteron"
        android:title="@string/filtertitle" />

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:dependency="dimmerswitch"
        android:disableDependentsState="true"
        android:key="sunriseswitch"
        android:summaryOff="@string/sunriseoff"
        android:summaryOn="@string/sunriseon"
        android:title="@string/sunrisetitle" />
    
    <Preference
        android:key="serviceButtons"
        android:dependency="dimmerswitch"
        android:layout="@layout/prefbuttons" >
    </Preference>
    
    <com.dr8.xposedmtc.utils.TimePreference
        android:dependency="sunriseswitch"
        android:key="dimmerstart"
        android:title="@string/dimmer_start_title" />
    <com.dr8.xposedmtc.utils.TimePreference
        android:dependency="sunriseswitch"
        android:key="dimmerend"
        android:title="@string/dimmer_end_title" />

    <de.robv.android.xposed.library.ui.ValueSeekBarPreference
        displayFormat="Dimmed value %d"
        max="255"
        min="0"
        android:defaultValue="10"
        android:dependency="dimmerswitch"
        android:key="dimmervalue"
        android:summary="@string/dimm_seek_summary"
        android:title="@string/dimm_seek_title" />
    <de.robv.android.xposed.library.ui.ValueSeekBarPreference
        displayFormat="Non-dimmed value %d"
        max="255"
        min="0"
        android:defaultValue="255"
        android:dependency="dimmerswitch"
        android:key="nondimmedvalue"
        android:summary="@string/nondimm_seek_summary"
        android:title="@string/nondimm_seek_title" />

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="loud"
        android:summaryOff="@string/loudoff"
        android:summaryOn="@string/loudon"
        android:title="@string/loudtitle" />
    
    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="resetswitch"
        android:summaryOff="@string/resetoff"
        android:summaryOn="@string/reseton"
        android:title="@string/resettitle" />

    <com.dr8.xposedmtc.utils.LearnPresets
        android:dependency="resetswitch"
        android:key="learn_presets"
        android:title="@string/radio_presets" >
        <intent android:action="com.dr8.xposedmtc.LEARN_PRESETS" />
    </com.dr8.xposedmtc.utils.LearnPresets>

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="allbtobd"
        android:summaryOff="@string/obd_summary_off"
        android:summaryOn="@string/obd_summary_on"
        android:title="@string/obd_title" />

    <EditTextPreference
        android:defaultValue="OBD"
        android:dependency="allbtobd"
        android:key="obdname"
        android:summary="@string/obdstring_summary"
        android:title="@string/obdstring_title" />

    <com.dr8.xposedmtc.utils.CustomSwitchPreference
        android:defaultValue="false"
        android:key="debug"
        android:summaryOff="@string/debug_summary_off"
        android:summaryOn="@string/debug_summary_on"
        android:title="@string/debug_title" />

    <Preference
        android:key="versionpref"
        android:selectable="false"
        android:summary="">
    </Preference>
</PreferenceScreen>